--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-spring": "^8.0.27",
+    "react-use": "^15.3.4",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
