--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@mdx-js/react": "^1.6.22",
     "autoprefixer": "^10.2.5",
     "gatsby": "^3.2.1",
-    "gatsby-image": "^3.2.0",
     "gatsby-plugin-feed": "^3.2.0",
+    "gatsby-plugin-image": "^1.2.1",
     "gatsby-plugin-manifest": "^3.2.0",
     "gatsby-plugin-mdx": "^2.2.0",
     "gatsby-plugin-offline": "^4.2.0",
